@@ -52,7 +52,7 @@
 # CONFIG_DRAM_SIZE - Describes the installed DRAM.
 # CONFIG_DRAM_START - The start address of DRAM (physical)
 # CONFIG_DRAM_END - Last address+1 of installed RAM
-# CONFIG_ARCH_IRQPRIO - The ST32F103Z supports interrupt prioritization
+# CONFIG_ARCH_IRQPRIO - The LPC17xx supports interrupt prioritization
 # CONFIG_ARCH_INTERRUPTSTACK - This architecture supports an interrupt
 #   stack. If defined, this symbol is the size of the interrupt
 #   stack in bytes.  If not defined, the user task stacks will be
@@ -102,6 +102,7 @@ CONFIG_LPC17_BUILDROOT=y
 #
 # Individual subsystems can be enabled:
 # (MAINOSC, PLL0, PLL1 and FLASH are controlled in board.h)
+#
 CONFIG_LPC17_ETHERNET=y
 CONFIG_LPC17_USBHOST=n
 CONFIG_LPC17_USBOTG=n
@@ -463,6 +464,7 @@ CONFIG_PREALLOC_TIMERS=8
 # CONFIG_FS_FAT - Enable FAT filesystem support
 # CONFIG_FAT_SECTORSIZE - Max supported sector size
 # CONFIG_FS_ROMFS - Enable ROMFS filesystem support
+#
 CONFIG_FS_FAT=n
 CONFIG_FS_ROMFS=n
 
@@ -709,6 +711,7 @@ CONFIG_EXAMPLE_UIP_DHCPC=n
 # CONFIG_EXAMPLE_NETTEST_NETMASK - Network mask
 # CONFIG_EXAMPLE_NETTEST_CLIENTIP - IP address of the
 #   client side of the test (may be target or host)
+#
 CONFIG_EXAMPLE_NETTEST_SERVER=n
 CONFIG_EXAMPLE_NETTEST_PERFORMANCE=n
 CONFIG_EXAMPLE_NETTEST_NOMAC=y
@@ -771,7 +774,7 @@ CONFIG_EXAMPLES_NSH_TELNET=n
 CONFIG_EXAMPLES_NSH_ARCHINIT=n
 CONFIG_EXAMPLES_NSH_IOBUFFER_SIZE=512
 CONFIG_EXAMPLES_NSH_DHCPC=n
-CONFIG_EXAMPLES_NSH_NOMAC=n
+CONFIG_EXAMPLES_NSH_NOMAC=y
 CONFIG_EXAMPLES_NSH_IPADDR=(10<<24|0<<16|0<<8|2)
 CONFIG_EXAMPLES_NSH_DRIPADDR=(10<<24|0<<16|0<<8|1)
 CONFIG_EXAMPLES_NSH_NETMASK=(255<<24|255<<16|255<<8|0)
